# api.cheez.cam

./: .env.example  .gitignore  Makefile  pyproject.toml
alembic/: env.py
alembic/versions/: 001_initial.py  002_add_max_guests.py  003_guest_display_name.py
app/: main.py
app/api/: dependencies.py  schemas.py
app/api/routers/: auth.py  events.py  photos.py  public.py  qr.py
app/application/: access.py  photos_admin.py  photos_guest.py  photos_upload.py  slug.py
app/core/: config.py
app/domain/: enums.py  errors.py
app/infrastructure/db/: __init__.py  models.py
app/infrastructure/security/: session.py
app/infrastructure/storage/: r2.py
app/workers/: run_worker.py  tasks.py
tests/: test_auth.py  test_public.py
