[project]
name = "event-camera-backend"
version = "0.1.0"
description = "event.camera API"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "sqlalchemy>=2.0.36",
    "alembic>=1.14.0",
    "psycopg[binary]>=3.2.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",
    "bcrypt>=4.2.0",
    "python-multipart>=0.0.17",
    "itsdangerous>=2.2.0",
    "email-validator>=2.2.0",
    "aioboto3>=13.3.0",
    "boto3>=1.35.0",
    "pillow>=11.0.0",
    "pillow-heif>=0.21.0",
    "qrcode[pil]>=8.0",
    "rq>=2.0.0",
    "redis>=5.2.0",
    "httpx>=0.28.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py313"
